# genomatch

./: .dockerignore  .gitignore  AGENTS.md  CHANGELOG.md  DEVELOPMENT.md  DOWNLOADS.md  Dockerfile  IMPLEMENTATION_GUIDE.md  INSTALL.md  LICENSE  README.md  SPEC.md  TESTS.md  config.example.yaml  pyproject.toml
.github/workflows/: release.yaml
dev/docs/: t2t-chm13v2-support-proposal.md
dev/variant_lists/: SCRIPTS.md
native/liftover_plugin/: README.md
ref/: INSTALL.sh
scripts/: download_reference.sh
spec/: contigs-and-metadata.md  core-objects.md  importers.md  mapping.md  payload-application.md  performance-contract.md  ploidy-model.md  shard-discovery.md  sumstats-harmonization.md  telemetry.md  variant-transforms.md  workflow.md
src/genomatch/: _cli_utils.py  apply_vmap_bfile.py  apply_vmap_pfile.py  apply_vmap_sumstats.py  apply_vmap_to_bfile.py  apply_vmap_to_pfile.py  apply_vmap_to_sumstats.py  apply_vmap_utils.py  bfile_utils.py  contig_cleanup_utils.py  contig_utils.py  convert_vmap_to_target.py  drop_strand_ambiguous.py  guess_build.py  haploid_utils.py  import_bim.py  import_pvar.py  import_sumstats.py  import_vcf.py  importer_utils.py  intersect_variants.py  liftover_build.py  match_vmap_to_target.py  normalize_contigs.py  prepare_variants.py  prepare_variants_sharded.py  project_payload.py  reference_utils.py  restrict_build_compatible.py  restrict_contigs.py  sample_axis_utils.py  sort_variants.py  sumstats_clean.py  sumstats_utils.py  tabular_rows.py  union_variants.py  vectorization_utils.py  vmap_drop_strand_ambiguous.py  vmap_liftover_build.py  vmap_match_target.py  (+9 more)
tests/: conftest.py  generate_synthetic_data.py  plink_vcf_helpers.py  real_liftover_helpers.py  test_apply_vmap_to_bfile.py  test_apply_vmap_to_pfile.py  test_apply_vmap_to_sumstats.py  test_bfile_utils.py  test_cleaned_sumstats_schema.py  test_contig_cleanup_utils.py  test_convert_vmap_to_target.py  test_drop_strand_ambiguous.py  test_guess_build.py  test_haploid_utils.py  test_importers.py  test_intersect_variants.py  test_liftover_build.py  test_normalize_contigs.py  test_package_install.py  test_prepare_variants.py  test_prepare_variants_sharded.py  test_project_payload.py  test_reference_utils.py  test_restrict_build_compatible.py  test_restrict_contigs.py  test_sort_variants.py  test_tabular_rows.py  test_union_variants.py  test_vmap_composition.py  test_vmap_match_target.py  test_vtable_contract.py  utils.py
tests/integration/: test_apply_vmap_to_bfile_haploid_roundtrip.py  test_apply_vmap_to_bfile_vcf_roundtrip.py  test_apply_vmap_to_sumstats_regressions.py  test_end_to_end_sumstats_bcftools_real.py  test_liftover_build_bcftools_real.py
tests/synthetic/: base.bed  base.bim  base.fam  (+3 more)
(+63 files in other folders)
