[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "genomatch"
version = "0.2.1"
description = "A Python toolkit for auditable harmonization, liftover, intersection, and projection of genetic variant tables and payloads."
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
authors = [
  { name = "Precimed" }
]
dependencies = [
  "numpy",
  "pandas",
  "pgenlib",
  "pysam",
  "PyYAML",
  "scipy",
]

[project.scripts]
"apply_vmap_to_bfile.py" = "genomatch.apply_vmap_to_bfile:cli_main"
"apply_vmap_to_pfile.py" = "genomatch.apply_vmap_to_pfile:cli_main"
"apply_vmap_to_sumstats.py" = "genomatch.apply_vmap_to_sumstats:cli_main"
"convert_vmap_to_target.py" = "genomatch.convert_vmap_to_target:cli_main"
"drop_strand_ambiguous.py" = "genomatch.drop_strand_ambiguous:cli_main"
"guess_build.py" = "genomatch.guess_build:cli_main"
"import_bim.py" = "genomatch.import_bim:cli_main"
"import_pvar.py" = "genomatch.import_pvar:cli_main"
"import_sumstats.py" = "genomatch.import_sumstats:cli_main"
"import_vcf.py" = "genomatch.import_vcf:cli_main"
"intersect_variants.py" = "genomatch.intersect_variants:cli_main"
"liftover_build.py" = "genomatch.liftover_build:cli_main"
"match_vmap_to_target.py" = "genomatch.match_vmap_to_target:cli_main"
"normalize_contigs.py" = "genomatch.normalize_contigs:cli_main"
"prepare_variants.py" = "genomatch.prepare_variants:cli_main"
"prepare_variants_sharded.py" = "genomatch.prepare_variants_sharded:cli_main"
"project_payload.py" = "genomatch.project_payload:cli_main"
"restrict_build_compatible.py" = "genomatch.restrict_build_compatible:cli_main"
"restrict_contigs.py" = "genomatch.restrict_contigs:cli_main"
"sort_variants.py" = "genomatch.sort_variants:cli_main"
"union_variants.py" = "genomatch.union_variants:cli_main"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
genomatch = [
  "schemas/*.yaml",
  "schemas/*.json",
]
